Created libgen module, to host pseudo-random map generation code.

--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -918,6 +918,7 @@ AC_CONFIG_FILES([Makefile
 	  src/lib/cfg/Makefile
 	  src/lib/map/Makefile
 	  src/lib/ker/Makefile
+	  src/lib/gen/Makefile
 	  src/lib/pil/Makefile
 	  src/lib/bot/Makefile
 	  src/lib/bot/mod-brute/Makefile
