It's possible to call the pseudo-random map generation hook from menu.

--- a/liquidwar6/script/Makefile.am
+++ b/liquidwar6/script/Makefile.am
@@ -47,6 +47,7 @@ menu-exit.scm \
 menu-ingame.scm \
 menu-join.scm \
 menu-map.scm \
+menu-map-browse.scm \
 menu-options-audio.scm \
 menu-options-rules.scm \
 menu-options.scm \
