--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -90,6 +90,7 @@ src/lib/dyn/dyn-path.c
 src/lib/dyn/dyn-test.c
 src/lib/dyn/dyn-testmain.c
 src/lib/gen/gen-create.c
+src/lib/gen/gen-seed.c
 src/lib/gen/gen-test.c
 src/lib/gen/gen-testmain.c
 src/lib/gfx/gfx-api.c
