--- a/liquidwar6/src/lib/liquidwar6.h.in
+++ b/liquidwar6/src/lib/liquidwar6.h.in
@@ -368,6 +368,9 @@ extern int lw6_register_funcs_cns ();
 /* lw6-funcstsk.c */
 extern int lw6_register_funcs_tsk ();
 
+/* lw6-funcsimg.c */
+extern int lw6_register_funcs_img ();
+
 /* lw6-funcsnet.c */
 extern int lw6_register_funcs_net ();
 
