--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -360,6 +360,7 @@ src/lib/map/map-texture.c
 src/lib/map/map-weapon.c
 src/lib/msg/msg-cmd.c
 src/lib/msg/msg-envelope.c
+src/lib/msg/msg-meta.c
 src/lib/msg/msg-oob.c
 src/lib/msg/msg-sort.c
 src/lib/msg/msg-test.c
