Core reindent through src/indent.sh

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -102,11 +102,15 @@ src/lib/gfx/mod-caca/mod-caca-backend.c
 src/lib/gfx/mod-caca/mod-caca-const.c
 src/lib/gfx/mod-caca/mod-caca-display.c
 src/lib/gfx/mod-caca/mod-caca-event.c
+src/lib/gfx/mod-caca/mod-caca-game.c
+src/lib/gfx/mod-caca/mod-caca-menu.c
 src/lib/gfx/mod-caca/mod-caca-mode.c
 src/lib/gfx/mod-caca/mod-caca-path.c
 src/lib/gfx/mod-caca/mod-caca-repr.c
 src/lib/gfx/mod-caca/mod-caca-resolution.c
 src/lib/gfx/mod-caca/mod-caca-setup.c
+src/lib/gfx/mod-caca/mod-caca-splash.c
+src/lib/gfx/mod-caca/mod-caca-utils.c
 src/lib/gfx/mod-gl1/gl1-background/gl1-background-api.c
 src/lib/gfx/mod-gl1/gl1-background/gl1-background-register.c
 src/lib/gfx/mod-gl1/gl1-background/gl1-bubbles/gl1-bubbles-backend.c
