--- a/liquidwar6/src/lib/gen/Makefile.am
+++ b/liquidwar6/src/lib/gen/Makefile.am
@@ -22,15 +22,22 @@ AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 
 noinst_LTLIBRARIES = libgen.la
-libgen_la_SOURCES = gen-create.c gen-seed.c gen-test.c
+if LW6_CUNIT
+TEST_SRC_FILE = gen-test.c
+else
+TEST_SRC_FILE =
+endif
+libgen_la_SOURCES = gen-create.c gen-seed.c $(TEST_SRC_FILE)
 libgendir= $(includedir)/@PACKAGE_TARNAME@/gen
 libgen_HEADERS = gen.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6gen-test
 liquidwar6gen_test_SOURCES = gen-testmain.c
 liquidwar6gen_test_LDADD = libgen.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6gen-test
+endif
 endif
 
 EXTRA_DIST = gen-internal.h
