--- a/liquidwar6/src/lib/sim/Makefile.am
+++ b/liquidwar6/src/lib/sim/Makefile.am
@@ -28,15 +28,22 @@ LW6DYN_LIB = ../dyn/libdyn.la
 endif
 
 noinst_LTLIBRARIES = libsim.la
-libsim_la_SOURCES = sim-mask.c sim-print.c sim-results.c sim-simulate.c sim-test.c
+if LW6_CUNIT
+TEST_SRC_FILE = sim-test.c
+else
+TEST_SRC_FILE =
+endif
+libsim_la_SOURCES = sim-mask.c sim-print.c sim-results.c sim-simulate.c $(TEST_SRC_FILE)
 libsimdir= $(includedir)/@PACKAGE_TARNAME@/sim
 libsim_HEADERS = sim.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6sim-test
 liquidwar6sim_test_SOURCES = sim-testmain.c
 liquidwar6sim_test_LDADD = libsim.la ../bot/libbot.la $(LW6DYN_LIB) ../pil/libpil.la ../ker/libker.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6sim-test
+endif
 endif
 
 EXTRA_DIST = sim-internal.h
