--- a/liquidwar6/src/lib/cfg/Makefile.am
+++ b/liquidwar6/src/lib/cfg/Makefile.am
@@ -22,15 +22,22 @@ AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ -lexpat
 
 noinst_LTLIBRARIES = libcfg.la
-libcfg_la_SOURCES = cfg-arg.c cfg-defaults.c cfg-env.c cfg-format.c cfg-load.c cfg-option.c cfg-save.c cfg-exp.c cfg-setup.c cfg-test.c cfg-unified.c cfg-xml.c
+if LW6_CUNIT
+TEST_SRC_FILE = cfg-test.c
+else
+TEST_SRC_FILE =
+endif
+libcfg_la_SOURCES = cfg-arg.c cfg-defaults.c cfg-env.c cfg-format.c cfg-load.c cfg-option.c cfg-save.c cfg-exp.c cfg-setup.c $(TEST_SRC_FILE) cfg-unified.c cfg-xml.c
 libcfgdir= $(includedir)/@PACKAGE_TARNAME@/cfg
 libcfg_HEADERS = cfg.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6cfg-test
 liquidwar6cfg_test_SOURCES = cfg-testmain.c
 liquidwar6cfg_test_LDADD = libcfg.la ../hlp/libhlp.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6cfg-test
+endif
 endif
 
 EXTRA_DIST = cfg-internal.h
