--- a/liquidwar6/src/lib/ker/Makefile.am
+++ b/liquidwar6/src/lib/ker/Makefile.am
@@ -22,15 +22,22 @@ AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ 
 
 noinst_LTLIBRARIES = libker.la
-libker_la_SOURCES = ker-armies.c ker-capture.c ker-checksumlog.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-hexa.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-node.c ker-nodearray.c ker-placestruct.c ker-score.c ker-scorearray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c ker-test.c ker-trigo.c ker-weapon.c ker-zonestate.c ker-zonestruct.c
+if LW6_CUNIT
+TEST_SRC_FILE = ker-test.c
+else
+TEST_SRC_FILE =
+endif
+libker_la_SOURCES = ker-armies.c ker-capture.c ker-checksumlog.c ker-cursor.c ker-cursorarray.c ker-fighter.c ker-gamestate.c ker-gamestruct.c ker-hexa.c ker-history.c ker-mapstate.c ker-mapstruct.c ker-move.c ker-node.c ker-nodearray.c ker-placestruct.c ker-score.c ker-scorearray.c ker-slotstate.c ker-slotstruct.c ker-spread.c ker-tables.c ker-team.c ker-teammask.c $(TEST_SRC_FILE) ker-trigo.c ker-weapon.c ker-zonestate.c ker-zonestruct.c
 libkerdir= $(includedir)/@PACKAGE_TARNAME@/ker
 libker_HEADERS = ker.h 
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6ker-test
 liquidwar6ker_test_SOURCES = ker-testmain.c
 liquidwar6ker_test_LDADD = libker.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6ker-test
+endif
 endif
 
 EXTRA_DIST = ker-internal.h ker-trigo.h trigo.py
