--- a/liquidwar6/src/lib/nod/Makefile.am
+++ b/liquidwar6/src/lib/nod/Makefile.am
@@ -22,15 +22,22 @@ AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 
 noinst_LTLIBRARIES = libnod.la
-libnod_la_SOURCES = nod-community.c nod-constinfo.c nod-dyninfo.c nod-info.c nod-refinfo.c nod-test.c
+if LW6_CUNIT
+TEST_SRC_FILE = nod-test.c
+else
+TEST_SRC_FILE =
+endif
+libnod_la_SOURCES = nod-community.c nod-constinfo.c nod-dyninfo.c nod-info.c nod-refinfo.c $(TEST_SRC_FILE)
 libnoddir= $(includedir)/@PACKAGE_TARNAME@/nod
 libnod_HEADERS = nod.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6nod-test
 liquidwar6nod_test_SOURCES = nod-testmain.c
 liquidwar6nod_test_LDADD = libnod.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6nod-test
+endif
 endif
 
 EXTRA_DIST = nod-internal.h
