--- a/liquidwar6/src/lib/p2p/Makefile.am
+++ b/liquidwar6/src/lib/p2p/Makefile.am
@@ -28,15 +28,22 @@ LW6DYN_LIB = ../dyn/libdyn.la
 endif
 
 noinst_LTLIBRARIES = libp2p.la
-libp2p_la_SOURCES = p2p-backends.c p2p-clioob.c p2p-connectregistered.c p2p-data.c p2p-db.c p2p-entry.c p2p-explore.c p2p-flush.c p2p-node.c p2p-peeridlist.c p2p-queueitem.c p2p-recv.c p2p-srvoob.c p2p-tentacle.c p2p-test.c
+if LW6_CUNIT
+TEST_SRC_FILE = p2p-test.c
+else
+TEST_SRC_FILE =
+endif
+libp2p_la_SOURCES = p2p-backends.c p2p-clioob.c p2p-connectregistered.c p2p-data.c p2p-db.c p2p-entry.c p2p-explore.c p2p-flush.c p2p-node.c p2p-peeridlist.c p2p-queueitem.c p2p-recv.c p2p-srvoob.c p2p-tentacle.c $(TEST_SRC_FILE)
 libp2pdir= $(includedir)/@PACKAGE_TARNAME@/p2p
 libp2p_HEADERS = p2p.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6p2p-test
 liquidwar6p2p_test_SOURCES = p2p-testmain.c
 liquidwar6p2p_test_LDADD = libp2p.la ../dat/libdat.la ../cli/libcli.la ../srv/libsrv.la ../msg/libmsg.la ../cnx/libcnx.la ../nod/libnod.la ../net/libnet.la $(LW6DYN_LIB) ../cfg/libcfg.la ../hlp/libhlp.la ../glb/libgl1b.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6p2p-test
+endif
 endif
 
 EXTRA_DIST = p2p-internal.h
