--- a/liquidwar6/src/lib/tsk/Makefile.am
+++ b/liquidwar6/src/lib/tsk/Makefile.am
@@ -22,15 +22,22 @@ AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 
 noinst_LTLIBRARIES = libtsk.la
-libtsk_la_SOURCES = tsk-loader.c tsk-test.c
+if LW6_CUNIT
+TEST_SRC_FILE = tsk-test.c
+else
+TEST_SRC_FILE =
+endif
+libtsk_la_SOURCES = tsk-loader.c $(TEST_SRC_FILE)
 libtskdir= $(includedir)/@PACKAGE_TARNAME@/tsk
 libtsk_HEADERS = tsk.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6tsk-test
 liquidwar6tsk_test_SOURCES = tsk-testmain.c
 liquidwar6tsk_test_LDADD = libtsk.la ../gen/libgen.la ../ldr/libldr.la ../cfg/libcfg.la ../hlp/libhlp.la ../ker/libker.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6tsk-test
+endif
 endif
 
 EXTRA_DIST = tsk-internal.h
