--- a/liquidwar6/src/lib/vox/Makefile.am
+++ b/liquidwar6/src/lib/vox/Makefile.am
@@ -22,15 +22,22 @@ AM_CFLAGS = @LW6_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 
 noinst_LTLIBRARIES = libvox.la
-libvox_la_SOURCES = vox-renderer.c vox-test.c
+if LW6_CUNIT
+TEST_SRC_FILE = vox-test.c
+else
+TEST_SRC_FILE =
+endif
+libvox_la_SOURCES = vox-renderer.c $(TEST_SRC_FILE)
 libvoxdir= $(includedir)/@PACKAGE_TARNAME@/vox
 libvox_HEADERS = vox.h
 
+if LW6_CUNIT
 if !FULLSTATIC
 libexec_PROGRAMS = liquidwar6vox-test
 liquidwar6vox_test_SOURCES = vox-testmain.c
 liquidwar6vox_test_LDADD = libvox.la ../gui/libgui.la ../ker/libker.la ../map/libmap.la ../cfg/libcfg.la ../hlp/libhlp.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6vox-test
+endif
 endif
 
 EXTRA_DIST = vox-internal.h
