--- a/liquidwar6-extra-maps/debian/rules
+++ b/liquidwar6-extra-maps/debian/rules
@@ -33,7 +33,7 @@ endif
 config.status: configure
 	dh_testdir
 	# Add here commands to configure the package.
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --bindir=\$${prefix}/games --libexecdir=\$${prefix}/games --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --liquidwar6-bin=no CFLAGS="$(CFLAGS)"
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --bindir=\$${prefix}/games --libexecdir=\$${prefix}/games --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --disable-liquidwar6 CFLAGS="$(CFLAGS)"
 
 
 #Architecture 
