--- a/liquidwar6-extra-maps/liquidwar6-extra-maps.spec.in
+++ b/liquidwar6-extra-maps/liquidwar6-extra-maps.spec.in
@@ -33,7 +33,7 @@ because the package is big.
 # Preparation of the package
 %prep
 %setup
-./configure --prefix=%{_prefix} ---liquidwar6-bin=no
+./configure --prefix=%{_prefix} --disable-liquidwar6
 
 # Building the package
 %build
