Added --allinone option when building coverage doc

--- a/liquidwar6/doc/Makefile.am
+++ b/liquidwar6/doc/Makefile.am
@@ -68,7 +68,7 @@ coverage-pub: coverage.tar.gz
 
 coverage.tar.gz: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 	Xvfb :6 -pixdepths 1 8 16 24 32 -screen 0 640x480x24 &
-	DISPLAY=:6 && rm -rf coverage-tmp && mkdir coverage-tmp && cd coverage-tmp && tar -xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && pwd > pwd.txt && mkdir build && cd build && $$(cat ../pwd.txt)/configure --enable-gcov && rm -f ../pwd.txt && make && src/liquidwar6 --test && cd doc/coverage && make opt && rm -f Makefile && cd .. && tar -czf coverage.tar.gz coverage && cd ../../../.. && mv coverage-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/build/doc/coverage.tar.gz . && rm -rf coverage-tmp
+	DISPLAY=:6 && rm -rf coverage-tmp && mkdir coverage-tmp && cd coverage-tmp && tar -xzf ../@PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz && cd @PACKAGE_TARNAME@-@PACKAGE_VERSION@ && pwd > pwd.txt && mkdir build && cd build && $$(cat ../pwd.txt)/configure --enable-gcov --enable-allinone && rm -f ../pwd.txt && make && src/liquidwar6 --test && cd doc/coverage && make opt && rm -f Makefile && cd .. && tar -czf coverage.tar.gz coverage && cd ../../../.. && mv coverage-tmp/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/build/doc/coverage.tar.gz . && rm -rf coverage-tmp
 	killall Xvfb
 
 global-pub: global.tar.gz
